--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <br>
 <br>
 <br>
 <br>
 <br>
 <center>
-<a href="three.js/examples/default.html" class="button">Start</a>
+  <button onclick="location.href = 'three.js/examples/default.html';"  class="w3-button w3-black w3-round-xxlarge" >Start</button>
+
 </center>
 
 </html>
